@@ -37,6 +37,8 @@
 #include "gimppluginmanager.h"
 #include "gimppluginprocedure.h"
 
+#include "gimp-log.h"
+
 
 typedef struct _GimpPlugInCleanupImage GimpPlugInCleanupImage;
 
@@ -334,13 +336,12 @@ gimp_plug_in_cleanup_item (GimpPlugInProcFrame   *proc_frame,
 
   if (cleanup->shadow_tiles)
     {
-#if 0
       GimpProcedure *proc = proc_frame->procedure;
 
-      g_printerr ("Plug-In '%s' didn't free shadow tiles of drawable '%s'.\n",
-                  gimp_plug_in_procedure_get_label (GIMP_PLUG_IN_PROCEDURE (proc)),
-                  gimp_object_get_name (GIMP_OBJECT (item)));
-#endif
+      GIMP_LOG (SHADOW_TILES,
+                "Freeing shadow tiles of drawable '%s' on behalf of '%s'.",
+                gimp_object_get_name (GIMP_OBJECT (item)),
+                gimp_plug_in_procedure_get_label (GIMP_PLUG_IN_PROCEDURE (proc)));
 
       gimp_drawable_free_shadow_tiles (GIMP_DRAWABLE (item));
     }
